# aptupdatechecker

./: .gitignore  Cargo.toml  DEVELOPMENT.adoc  README.adoc  README.md  apt_update_checker.py  build.rs  fw_update_checker.py  justfile  packup.sh  pyproject.toml  rust-apt-libapt3.patch  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: Dockerfile  check.yml  ci-cd-pipeline.mmd  deploy.yml  docker-publish.yml
aptupdatechecker/lib/: update_checker_common.py
debian/: README  README.Debian  aptupdatechecker.install  aptupdatechecker.service  aptupdatechecker_apt_update_checker.service  aptupdatechecker_apt_update_checker.timer  aptupdatechecker_autoclean.timer  aptupdatechecker_autoremove.service  aptupdatechecker_autoremove.timer  aptupdatechecker_firmware_update_checker.service  aptupdatechecker_firmware_update_checker.timer  changelog  control  copyright  install  postinst  postrm  prerm  rules
icons/: imagesource
services/: my_apt_autoclean.service  my_apt_autoclean.timer  my_apt_autoremove.timer  my_apt_update_checker.service  my_apt_update_checker.timer  my_firmware_update_checker.service  my_firmware_update_checker.timer
src/: apt_update.rs  common.rs  fw_update.rs  main.rs
systemd/: aptupdatechecker_apt_update_checker.service  aptupdatechecker_autoclean.service  aptupdatechecker_autoclean.timer  aptupdatechecker_autoremove.timer  aptupdatechecker_firmware_update_checker.service
systemd/system/: aptupdatechecker.service  aptupdatechecker_apt_cache_update.service  aptupdatechecker_apt_cache_update.timer  aptupdatechecker_autoclean.service  aptupdatechecker_autoclean.timer  aptupdatechecker_autoremove.service  aptupdatechecker_autoremove.timer
systemd/user/: aptupdatechecker_apt_update_checker.path  aptupdatechecker_apt_update_checker.service  aptupdatechecker_apt_update_checker.timer  aptupdatechecker_firmware_update_checker.service  aptupdatechecker_firmware_update_checker.timer
tests/: systemdverify.sh
