[package]
name = "aptupdatechecker"
description = "System service for checking APT package and firmware updates"
version = "0.1.3"
edition = "2024"
license = "GPL-3.0-only"
authors = ["Tyler <tyler@example.com>"]
repository = "https://github.com/tyler/aptupdatechecker"

[dependencies]
notify-rust = "4.14.0"
regex = "1.12.2"
rust-apt = "0.9.0"

[dev-dependencies]
filetime = "0.2"
proptest = "1.6"
tempfile = "3.24"
cargo-tarpaulin = "0.35.2"
cargo-deb = "3.6.3"
libc = "0.2.184"

[package.metadata.deb]
maintainer = "Tyler Kelly <tyler.kelly@outlook.com>"
section = "admin"
priority = "optional"
depends = "$auto, apt, fwupd"
assets = [
    ["target/release/aptupdatechecker", "usr/bin/", "755"],
    ["systemd/system/*.service", "lib/systemd/system/", "644"],
    ["systemd/system/*.timer", "lib/systemd/system/", "644"],
    ["systemd/user/*.service", "usr/lib/systemd/user/", "644"],
    ["systemd/user/*.timer", "usr/lib/systemd/user/", "644"],
    ["systemd/user/*.path", "usr/lib/systemd/user/", "644"],
]
maintainer-scripts = "debian/"
